# player_tracker_simpl

./: .gitignore  Dockerfile  Dockerfile.base  PERFORMANCE_OPTIMIZATION.md  README.md  fly.toml  main.py  pyproject.toml  test_gpu_selection.py
scripts/: benchmark_feature_extractors.py  convert_onnx_to_tensorrt.py
tracker/: config_finder.py
tracker/algorithms/: tracker.py
tracker/algorithms/utils/: botsort.py  strongsort.py
tracker/configs/: main.yaml
tracker/configs/detector/: yolo_api.yaml
tracker/configs/gta_link/: refiner.yaml
tracker/configs/reid/: feature_extractor.yaml  feature_extractor_tensorrt.yaml
tracker/configs/tracker/: bot_sort.yaml  strong_sort.yaml
tracker/detector/: yolo_api.py
tracker/engine/: tracker_engine.py
tracker/gta_link/: tracklet_read_write.py  tracklet_refiner.py
tracker/gta_link/utils/: Tracklet.py  refine_tracklets.py  refine_tracklets_batched.py  refine_tracklets_cupy.py
tracker/reid/: feature_extractor.py  feature_extractor_prtreid.py  feature_extractor_tensorrt.py
tracker/reid/utils/: common.py  common_runtime.py
tracker/utils/: aws_utils.py  create_video_from_tracklets.py  merge_tracklets_groups.py  pipeline_base.py  statistics.py  video_reader.py  video_splitter.py
tracker/visualization/: players_drawer.py  video_creator.py
