[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "player_tracker_simpl"
version = "0.2.0"
description = "A Framework for football players identification"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "tracklab",
    "soccernet==0.1.55",
    "torch==2.5.0",
    "openmim==0.3.9",
    "lightning==2.0.9",
    "numpy",
    "onnx",
    "onnxruntime-gpu",
    "ultralytics",
    "supervision",
    "inference",
    "loguru",
    "scikit-learn",
    "lap",
    "Cython",
    "h5py",
    "Pillow",
    "six",
    "scipy",
    "opencv-python",
    "matplotlib",
    "tb-nightly",
    "future",
    "yacs",
    "gdown",
    "flake8",
    "yapf",
    "isort==4.3.21",
    "imageio",
    "chardet",
    "tabulate",
    "thop",
    "seaborn",
    "boxmot",
    "hydra-core",
    "tqdm",
    "rich",
    "torchreid @ git+https://github.com/VlSomers/bpbreid",
    "prtreid @ git+https://github.com/KirSerg64/prtreid",
    "albumentations==1.4.3",
]

[project.optional-dependencies]
dev = [
    "ipykernel==6.29.4",
    "pytest",
    "pytest-cov",
    "black",
    "isort",
    "flake8",
]
tensorrt = [
    "tensorrt-cu12==10.7",
    "tensorrt-cu12-bindings==10.7",
    "tensorrt-cu12-libs==10.7",
    "tensorrt-lean-cu12",
    "tensorrt-dispatch-cu12",
    "tensorrt==10.7",
]
gpu = [
    "onnxruntime-gpu==1.21.1",
]
cpu = [
    "onnxruntime",
]

[project.scripts]
player-tracker = "main:main"

[tool.setuptools.packages.find]
include = ["tracker*"]

[tool.setuptools.package-data]
tracker = ["**/*.yaml", "**/*.yml", "**/*.txt"]

[tool.setuptools]
py-modules = ["main"]

[tool.uv]
dev-dependencies = [
    "ipykernel==6.29.4",
    "pytest",
    "pytest-cov",
]

# [tool.uv.sources]
# prtreid = { git = "https://github.com/KirSerg64/prtreid.git" }
# torchreid = { git = "https://github.com/VlSomers/bpbreid.git" }

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]